--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
 	--theme-color-input: #0EB214;
 	--theme-color-settings: #383749;
 	--theme-color-reset: #D70861;
-	--theme-color-background: #000000;
+	--theme-color-background: #FFFFFF;
 	--theme-color-button-light: #CCCCCC;
 	--theme-color-button-dark: #333333;
 	--theme-color-button-light-hover: #AAAAAA;
